# affect_analysis

./: AGENTS.md  README.md  pyproject.toml  requirements.txt  sample50_results.jsonl  sample50_results.triplets.jsonl
documentation/: Svarupa_31dimension_technical_specification.docx  Svarupa_Analytical_Layers_Technical_Specification.docx  Svarupa_Architecture_Review_and_Recommendations.docx  Svarupa_KUER_Media_Strategy.docx  Svarupa_KUER_Media_Strategy_v2.docx  Svarupa_Mapping_AI_UX_Analysis.docx  Svarupa_Mapping_AI_UX_Analysis_v2.docx  Svarupa_UIUX_Adoption_Analysis.docx  Svarupa_UIUX_Adoption_Analysis_v2.docx  ~$arupa_31dimension_technical_specification.docx
prompts/: batch_processing_lived_experiences.md
scripts/: backfill_d9_triplet_descriptions.py  batch_lived_experience.py  bulk_analyze.py  dimension_dwelling_prompt_template.py  eval_aff_lived_experience_coverage.py  eval_aff_lived_experience_coverage_v2.py  export_aff_concept_layer.py  export_aff_triplet_descriptions.py  export_met_triplet_descriptions.py  export_psy_triplet_descriptions.py  fix_aff_concept_layer.py  generate_dimension_dwelling_prompts.py  generate_met_coverage.py  migrate_companion_to_assistant.py  patch_nirveda_poles.py  run_api.sh  run_narrative_api.sh  sample_coverage.py  score_coverage.py  seed_aff_layer_scorers.py  seed_concept_descriptions_from_json.py  seed_concept_layer_from_excel.py
sql/: 001_svarupa_dimensions_concepts.sql  002_svarupa_concepts_data.sql  003_migrate_companion_to_assistant.sql  004_fix_aff_concept_layer.sql  005_layer_scorer_emit.sql  006_concept_layer_role.sql  (+3 more)
(+2112 files in other folders)
